# em27-location-data-template

./: .gitignore  README.md
.github/workflows/: run-integrity-tests.yml
data/: campaigns.json  locations.json  sensors.json
integrity-tests/: README.md  pyproject.toml
integrity-tests/tests/: __init__.py  test_campaigns.py  test_locations.py  test_sensors.py
