[tool.poetry]
name = "em27-location-integrity-tests"
version = "1.0.0"
description = ""
authors = ["Moritz Makowski <moritz.makowski@tum.de>"]

[tool.poetry.dependencies]
python = "3.10.4"
Cerberus = "1.3.4"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=88